Added a message to readme.md

--- a/form.html
+++ b/form.html
@@ -12,5 +12,32 @@
             <a href="links.html">Links</a>
             <a href="gallery.html">Gallery</a>
         </div>
+        <div class="box-main-body">
+            <div class="main-body">
+                <form>
+                    <fieldset>
+                        <div class="input-box">
+                            <label target="first-name">First name</label>
+                            <input type="text" id="first-name" />
+                        </div>
+                        <div class="input-box">
+                            <label target="last-name">Last name</label>
+                            <input type="text" id="last-name" />
+                        </div>
+                        <div>
+                            <input type="checkbox" id="make-public" />
+                            <label target="make-public">Make public?</label>
+                        </div>
+                        <div class="input-box">
+                            <label target="comments">Comments</label>
+                            <textarea id="comments"></textarea>
+                        </div>
+                        <div class>
+                            <button type="submit" fromtarget="_blank">Submit</button>
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
+        </div>
     </body>
 </html>
