--- a/links.html
+++ b/links.html
@@ -12,5 +12,17 @@
             <a href="links.html">Links</a>
             <a href="gallery.html">Gallery</a>
         </div>
+        <div class="box-main-body">
+            <div class="main-body">
+                <h1 class="page-title">Links</h1>
+                <ul>
+                    <li><a href="https://www.akc.org/dog-breeds/" target="_blank">American Kennel Club</a></li>
+                    <li><a href="https://www.purina.com/dogs/dog-breeds" target="_blank">Purina</a></li>
+                    <li><a href="https://dogtime.com/dog-breeds/profiles" target="_blank">Dogtime</a></li>
+                    <li><a href="https://www.petfinder.com/dogs-and-puppies/breeds/?page=1" target="_blank">Putfinder</a></li>
+                    <li><a href="https://be.chewy.com/dog-breeds/" target="_blank">chewy</a></li>
+                </ul>
+            </div>
+        </div>
     </body>
 </html>
